applications/monitoring/monitoring-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-monitor
  template:
    metadata:
      labels:
        app: cluster-monitor

    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          args: ["--config.file=/etc/prometheus/prometheus.yml"]
          ports:
            - containerPort: 9090
              name: prometheus-port
          volumeMounts:
            - name: config-vol
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
            - name: prometheus-data
              mountPath: /prometheus
          imagePullPolicy: Always
        
        - name: grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000
              name: grafana-port
          volumeMounts:
            - name: config-vol
              mountPath: /etc/grafana/provisioning/datasources/datasource.yml
              subPath: datasource.yml
            - name: grafana-data
              mountPath: /var/lib/grafana


      volumes:
        - name: config-vol
          configMap:
            name: monitoring-config
        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prom-claim
        - name: grafana-data
          persistentVolumeClaim:
            claimName: graf-claim
