applications/monitoring/monitoring-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cluster-monitor
  labels:
    app: cluster-monitor
spec:
  clusterIP: None
  ports:
    - name: grafana-port
      port: 3000
    - name: prometheus-port
      port: 9090
  selector:
    app: cluster-monitor

---
kind: Service
apiVersion: v1
metadata:
  name: node-exporter
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9100'

spec:
  selector:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: node-exporter
  ports:
    - name: node-exporter
      protocol: TCP
      port: 9100
      targetPort: 9100
